# vn-open-api-provinces

./: .gitignore  .vercelignore  README.rst  config.toml  encre.toml  justfile  mise.toml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  test.yml
Deployment/Ansible/: inventory.yml  playbook.yml
Deployment/Nginx/: provinces.conf
Deployment/Nginx/includes/: cors-headers.conf
Deployment/SystemD/: provinces.service
api/: __init__.py  main.py  schema.py  schema_v1.py  schema_v2.py  search.py  v1.py  v2.py
content/: _index.md
content/examples/: index.md
front-dev/: bun.lockb  package.json  tailwind.config.js
static/css/: site.css  uno.css
syntaxes/: http.sublime-syntax  nushell.sublime-syntax
templates/: base.html  examples.html  index.html
tests/: test_provinces.py  test_v1.py  test_v2.py
