[project]
name = "vn-open-api-provinces"
description = ""
requires-python = "<4.0,>=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com" }]
dependencies = [
  "Unidecode >= 1.3.8",
  "aiofiles >= 25.1.0",
  "fastapi-problem >= 0.11.6",
  "fastapi >= 0.119.0",
  "fastenumplus >= 1.4.0",
  "granian >= 2.6.1",
  "logbook >= 1.9.2",
  "lunr >= 0.8.0",
  "pydantic-settings >= 2.11.0",
  "pydantic >= 2.12.3",
  "uvicorn >= 0.40.0",
  "vietnam-provinces >= 2026.01.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "pytest >= 8.4.2",
  "ty>=0.0.9",
]
lint = [
  "ruff >= 0.14.10",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
  "logbook.*",
  "lunr.*",
  "fast_enum.*",
]
ignore_missing_imports = true

[tool.pdm.version]
source = "file"
path = "api/__init__.py"

[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I", "UP"]
ignore = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"

[tool.uv.sources]
fastapi-problem  = { git = 'https://github.com/hongquan/fastapi-problem.git', rev = 'quan' }
