[project]
name = "vn-open-api-provinces"
description = ""
requires-python = "<4.0,>=3.12"
license = "GPL-3.0-or-later"
authors = [{ name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com" }]
dependencies = [
  "Unidecode >= 1.4.0",
  "aiofiles >= 25.1.0",
  "fastapi-problem >= 0.12.1",
  "fastapi >= 0.129.0",
  "granian >= 2.7.1",
  "logbook >= 1.9.2",
  "pydantic-settings >= 2.13.1",
  "pydantic >= 2.12.5",
  "uvicorn >= 0.41.0",
  "vietnam-provinces >= 2026.2.3",
]
dynamic = ["version"]

[dependency-groups]
dev = []
lint = [
  "ruff >= 0.14.10",
  "ty>=0.0.9",
]
test = [
  "httpx>=0.28.1",
  "msgspec>=0.20.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
  "logbook.*",
]
ignore_missing_imports = true

[tool.pdm.version]
source = "file"
path = "api/__init__.py"

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I", "UP"]
ignore = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"

[tool.uv.sources]
fastapi-problem = { git = "https://github.com/hongquan/fastapi-problem.git", rev = "quan" }
